# atom

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: atom-config.cmake.in
include/: atom.hpp
test/: CMakeLists.txt  CMakelists.txt
test/src/: main.cpp
